--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -89,7 +89,7 @@ jobs:
           - ubuntu-20.04
         container:
           - "ubuntu_node.dockerfile"
-          - "ubuntu_stable_node.dockerfile"
+          - "ubuntu_20.04_node.dockerfile"
         node:
           - 14
         pnpm:
