fix: select the default llvm version based on ubuntu version

--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "@actions/io": "^1.1.2",
     "@actions/tool-cache": "^1.7.2",
     "execa": "^5.1.1",
+    "make-synchronous": "^1.0.0",
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#9f672c1",
     "numerous": "1.0.3",
     "semver": "7.3.7",
     "setup-python": "github:actions/setup-python#v3.1.2",
     "time-delta": "github:aminya/time-delta#69d91a41cef28e569be9a2991129f5f7d1f0d00e",
+    "ubuntu-version": "^2.0.0",
     "untildify": "^4.0.0",
     "which": "^2.0.2"
   },
