--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "shx rm -rf dist/ && shx mkdir ./dist && run-p test.tsc build.parcel copy.matchers",
     "build.docker": "pnpm build && docker build -f ./dev/docker/ubuntu_node.dockerfile -t setup_cpp .",
     "build.parcel": "cross-env NODE_ENV=production parcel build --detailed-report",
-    "bump": "ncu -u -x execa,make-synchronous && pnpm update",
+    "bump": "ncu -u -x execa,make-synchronous,numerous,jest && pnpm update",
     "clean": "shx rm -rf .parcel-cache dist exe",
     "copy.matchers": "shx cp ./src/gcc/gcc_matcher.json ./dist/ && shx cp ./src/msvc/msvc_matcher.json ./dist && shx cp ./src/python/python_matcher.json ./dist/ && shx cp ./src/llvm/llvm_matcher.json ./dist/ ",
     "dev": "cross-env NODE_ENV=development parcel watch",
@@ -33,7 +33,7 @@
   },
   "prettier": "prettier-config-atomic",
   "dependencies": {
-    "@actions/core": "^1.6.0",
+    "@actions/core": "^1.7.0",
     "@actions/exec": "^1.1.1",
     "@actions/io": "^1.1.2",
     "@actions/tool-cache": "^1.7.2",
@@ -51,28 +51,28 @@
   },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.2",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^27.5.0",
     "@types/mri": "^1.1.1",
-    "@types/node": "^17.0.24",
+    "@types/node": "^17.0.31",
     "@types/semver": "^7.3.9",
     "@types/which": "^2.0.1",
     "caxa": "^2.1.0",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
-    "cspell": "^5.19.7",
-    "eslint": "^8.13.0",
+    "cspell": "^5.20.0",
+    "eslint": "^8.14.0",
     "eslint-config-atomic": "^1.17.1",
     "jest": "^27.5.1",
     "loose-ts-check": "^1.2.0",
-    "npm-check-updates": "^12.5.9",
+    "npm-check-updates": "^12.5.11",
     "npm-run-all2": "^5.0.2",
-    "parcel": "^2.4.1",
+    "parcel": "^2.5.0",
     "prettier": "2.6.2",
     "prettier-config-atomic": "^3.0.9",
     "shx": "0.3.4",
     "terser-config-atomic": "^0.1.1",
     "ts-jest": "^27.1.4",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.4"
   },
   "engines": {
     "node": ">=12.x"
@@ -99,7 +99,7 @@
   "pnpm": {
     "overrides": {
       "semver": "7.3.7",
-      "eslint": "^8.13.0",
+      "eslint": "^8.14.0",
       "prettier": "2.6.2",
       "lru-cache": "7.8.1",
       "core-js": "*",
