--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "typescript": "^4.6.4"
   },
   "engines": {
-    "node": ">=12.x"
+    "node": ">=12.20"
   },
   "keywords": [
     "github-actions",
