fix: update make-synchronous

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "shx rm -rf dist/ && shx mkdir ./dist && run-p test.tsc build.parcel copy.matchers",
     "build.docker": "pnpm build && docker build -f ./dev/docker/ubuntu_node.dockerfile -t setup_cpp .",
     "build.parcel": "cross-env NODE_ENV=production parcel build --detailed-report",
-    "bump": "ncu -u -x execa,make-synchronous,numerous,jest && pnpm update",
+    "bump": "ncu -u -x execa,numerous,jest && pnpm update",
     "clean": "shx rm -rf .parcel-cache dist exe",
     "copy.matchers": "shx cp ./src/gcc/gcc_matcher.json ./dist/ && shx cp ./src/msvc/msvc_matcher.json ./dist && shx cp ./src/python/python_matcher.json ./dist/ && shx cp ./src/llvm/llvm_matcher.json ./dist/ ",
     "dev": "cross-env NODE_ENV=development parcel watch",
@@ -38,7 +38,7 @@
     "@actions/io": "^1.1.2",
     "@actions/tool-cache": "^1.7.2",
     "execa": "^5.1.1",
-    "make-synchronous": "^0.1.1",
+    "make-synchronous": "^1.0.0",
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#9f672c1",
     "numerous": "1.0.3",
