--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "repository": "https://github.com/aminya/setup-cpp",
   "license": "Apache-2.0",
   "author": "Amin Yahyaabadi",
-  "main": "./dist/setup_cpp.js",
+  "main": "dist/setup_cpp.js",
+  "module": "dist/setup_cpp.mjs",
   "source": "./src/main.ts",
   "bin": {
-    "setup-cpp": "./dist/setup_cpp.js",
-    "setup_cpp": "./dist/setup_cpp.js"
+    "setup-cpp": "./dist/setup_cpp.mjs",
+    "setup_cpp": "./dist/setup_cpp.mjs"
   },
   "scripts": {
     "build": "shx rm -rf dist/ && shx mkdir ./dist && run-p test.tsc build.parcel copy.matchers",
@@ -113,7 +114,8 @@
     }
   },
   "targets": {
-    "main": {
+    "main": false,
+    "module": {
       "context": "node",
       "includeNodeModules": true,
       "optimize": true
