--- a/package.json
+++ b/package.json
@@ -59,20 +59,20 @@
     "caxa": "^2.1.0",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
-    "cspell": "^5.21.1",
+    "cspell": "^6.0.0",
     "eslint": "^8.16.0",
     "eslint-config-atomic": "^1.17.1",
     "jest": "^28.1.0",
     "loose-ts-check": "^1.2.0",
-    "npm-check-updates": "^13.0.1",
+    "npm-check-updates": "^13.0.3",
     "npm-run-all2": "^5.0.2",
-    "parcel": "^2.5.0",
+    "parcel": "2.5.0",
     "prettier": "2.6.2",
     "prettier-config-atomic": "^3.0.9",
     "shx": "0.3.4",
     "terser-config-atomic": "^0.1.1",
-    "ts-jest": "^28.0.2",
-    "typescript": "^4.6.4"
+    "ts-jest": "^28.0.3",
+    "typescript": "^4.7.2"
   },
   "engines": {
     "node": ">=12.x"
