--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -45,6 +45,8 @@ words:
   - msys
   - multilib
   - mxschmitt
+  - noconfirm
+  - noprogressbar
   - nothrow
   - npmrc
   - Opencppcoverage
@@ -54,6 +56,7 @@ words:
   - pypy
   - setupcpp
   - setx
+  - Syuu
   - terserrc
   - tsbuildinfo
   - ucrt
