--- a/dev/container-tests/arch.yml
+++ b/dev/container-tests/arch.yml
@@ -1,45 +1,44 @@
 schemaVersion: 2.0.0
 
 commandTests:
-- name: gcc compiler
-  command: gcc
-  args: ["--version"]
-  expectedOutput: [".*gcc.*GCC.*"]
-- name: g++ compiler
-  command: g++
-  args: ["--version"]
-  expectedOutput: [".*g\\+\\+.*GCC.*"]
-- name: cmake
-  command: cmake
-  args: ["--version"]
-  expectedOutput: [".*cmake version.*"]
-- name: make
-  command: make
-  args: ["--version"]
-  expectedOutput: [".*GNU Make.*"]
-- name: ninja
-  command: ninja
-  args: ["--version"]
-  expectedOutput: [".*1.*"]
-- name: gcovr
-  command: gcovr
-  args: ["--version"]
-  expectedOutput: [".*gcovr.*"]
-- name: ccache
-  command: ccache
-  args: ["--version"]
-  expectedOutput: [".*ccache.*"]
-- name: doxygen
-  command: doxygen
-  args: ["--version"]
-  expectedOutput: [".*1.*"]
-- name: cppcheck
-  command: cppcheck
-  args: ["--version"]
-  expectedOutput: [".*Cppcheck.*"]
-
+  - name: gcc compiler
+    command: gcc
+    args: ["--version"]
+    expectedOutput: [".*gcc.*GCC.*"]
+  - name: g++ compiler
+    command: g++
+    args: ["--version"]
+    expectedOutput: [".*g\\+\\+.*GCC.*"]
+  - name: cmake
+    command: cmake
+    args: ["--version"]
+    expectedOutput: [".*cmake version.*"]
+  - name: make
+    command: make
+    args: ["--version"]
+    expectedOutput: [".*GNU Make.*"]
+  - name: ninja
+    command: ninja
+    args: ["--version"]
+    expectedOutput: [".*1.*"]
+  - name: gcovr
+    command: gcovr
+    args: ["--version"]
+    expectedOutput: [".*gcovr.*"]
+  - name: ccache
+    command: ccache
+    args: ["--version"]
+    expectedOutput: [".*ccache.*"]
+  - name: doxygen
+    command: doxygen
+    args: ["--version"]
+    expectedOutput: [".*1.*"]
+  - name: cppcheck
+    command: cppcheck
+    args: ["--version"]
+    expectedOutput: [".*Cppcheck.*"]
 
 fileExistenceTests:
-- name: 'vcpkg'
-  path: '/root/vcpkg'
-  shouldExist: true
+  - name: "vcpkg"
+    path: "/root/vcpkg"
+    shouldExist: true
