--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -90,6 +90,7 @@ jobs:
         container:
           - "ubuntu_node.dockerfile"
           - "ubuntu_20.04_node.dockerfile"
+          - "arch_node.dockerfile"
         node:
           - 14
         pnpm:
