chore: add container-tests for fedora

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "shx rm -rf dist/ && shx mkdir ./dist && run-p test.tsc build.parcel copy.matchers",
     "build.docker": "pnpm build && docker build -f ./dev/docker/ubuntu_node.dockerfile -t setup_cpp .",
     "build.docker.arch": "pnpm build && docker build -f ./dev/docker/arch_node.dockerfile -t setup_cpp:arch .",
+    "build.docker.fedora": "pnpm build && docker build -f ./dev/docker/fedora_node.dockerfile -t setup_cpp:fedora .",
     "build.docker.ubuntu": "pnpm build && docker build -f ./dev/docker/ubuntu_node.dockerfile -t setup_cpp:ubuntu .",
     "build.parcel": "cross-env NODE_ENV=production parcel build --detailed-report",
     "bump": "ncu -u -x execa,numerous && pnpm update",
@@ -32,10 +33,12 @@
     "prepare": "npm run build",
     "start.docker": "docker run -t setup_cpp .",
     "start.docker.arch": "docker run -t setup_cpp:arch .",
+    "start.docker.fedora": "docker run -t setup_cpp:fedora .",
     "start.docker.ubuntu": "docker run -t setup_cpp:ubuntu .",
     "test": "run-p test.format test.lint test.cspell test.tsc test.unit",
     "test.cspell": "cspell lint --no-progress --show-suggestions",
     "test.docker.arch": "docker build -f ./dev/docker/arch_node.dockerfile --target base -t setup_cpp:arch-base . && container-structure-test test --image setup_cpp:arch-base --config ./dev/container-tests/arch.yml",
+    "test.docker.fedora": "docker build -f ./dev/docker/fedora_node.dockerfile --target base -t setup_cpp:fedora-base . && container-structure-test test --image setup_cpp:fedora-base --config ./dev/container-tests/fedora.yml",
     "test.docker.ubuntu": "docker build -f ./dev/docker/ubuntu_node.dockerfile --target base -t setup_cpp:ubuntu-base . && container-structure-test test --image setup_cpp:ubuntu-base --config ./dev/container-tests/ubuntu.yml",
     "test.format": "prettier . --check",
     "test.lint": "eslint .",
