--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,6 +17,7 @@ jobs:
         os:
           - windows-2022
           - windows-2019
+          - ubuntu-22.04
           - ubuntu-20.04
           - ubuntu-18.04
           - macos-11
