chore: rename the action for better search-ability [skip ci]

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Setup Cpp"
+name: "Setup Cpp (C++ / C)"
 description: "Install all the tools required for building and testing C++/C projects."
 author: "Amin Yahyaabadi"
 
