feat: add exec-powershell package

--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,8 @@ temp-*
 *.tsbuildinfo
 
 # Build directories
-./dist/
-!./dist/setup_cpp.js
-!./dist/setup_cpp.js.map
+dist/
+!./dist/
 .parcel-cache
 exe/
 *.log
