--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lint.prettier": "prettier --write .",
     "lint.tsc": "tsc --noEmit | loose-ts-check",
     "pack.exe": "shx rm -rf ./dist/tsconfig.tsbuildinfo && node ./dev/scripts/pack-exe.js",
-    "prepare": "npm run build",
+    "prepare": "pnpm run -r build && pnpm run -w build",
     "start.docker": "docker run -t setup_cpp .",
     "start.docker.arch": "docker run -t setup_cpp:arch .",
     "start.docker.fedora": "docker run -t setup_cpp:fedora .",
