--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@actions/io": "^1.1.2",
     "@actions/tool-cache": "^2.0.1",
     "escape-path-with-spaces": "^1.0.0",
+    "exec-powershell": "workspace:*",
     "execa": "^5.1.1",
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#9f672c1",
