--- a/packages/sudo-tools/package.json
+++ b/packages/sudo-tools/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sudo-tools",
+  "name": "root-tools",
   "version": "1.0.0",
-  "description": "Tools for working with sudo: executing command as sudo if available, detecting root, etc.",
+  "description": "Tools for working with root and sudo such as executing command as root, detecting root, etc.",
   "homepage": "https://github.com/aminya/setup-cpp",
   "license": "Apache-2.0",
   "author": "Amin Yahyaabadi",
@@ -24,6 +24,9 @@
     "is-root",
     "is-sudo",
     "exec-sudo",
+    "exec-root",
+    "isroot",
+    "issudo",
     "exec",
     "execa",
     "spawn",
