docs: automatically create the readme for the packages

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clean": "shx rm -rf .parcel-cache dist exe",
     "copy.matchers": "shx cp ./src/gcc/gcc_matcher.json ./dist/ && shx cp ./src/msvc/msvc_matcher.json ./dist && shx cp ./src/python/python_matcher.json ./dist/ && shx cp ./src/llvm/llvm_matcher.json ./dist/ ",
     "dev": "cross-env NODE_ENV=development parcel watch",
+    "docs": "shx rm -rf packages/*/README.md && pnpm -r exec readme --path ../../dev/readme/template.md -y && pnpm -r exec ts-readme",
     "format": "run-s lint.prettier",
     "lint": "run-p --aggregate-output --continue-on-error lint.cspell lint.eslint lint.prettier lint.tsc",
     "lint.cspell": "cspell lint --no-progress --show-suggestions",
@@ -60,9 +61,9 @@
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#9f672c1",
     "numerous": "1.0.3",
+    "root-tools": "workspace:*",
     "semver": "7.3.7",
     "setup-python": "github:actions/setup-python#c474c82340438924daab9282d07300bfe7e3692d",
-    "root-tools": "workspace:*",
     "time-delta": "github:aminya/time-delta#69d91a41cef28e569be9a2991129f5f7d1f0d00e",
     "ubuntu-version": "^2.0.0",
     "untildify": "^4.0.0",
@@ -81,6 +82,7 @@
     "cspell": "^6.5.0",
     "eslint": "^8.21.0",
     "eslint-config-atomic": "^1.18.1",
+    "gen-readme": "^1.6.0",
     "jest": "^28.1.3",
     "loose-ts-check": "^1.2.0",
     "npm-check-updates": "^16.0.5",
@@ -88,9 +90,11 @@
     "parcel": "2.6.2",
     "prettier": "2.7.1",
     "prettier-config-atomic": "^3.0.10",
+    "readme-md-generator": "^1.0.0",
     "shx": "0.3.4",
     "terser-config-atomic": "^0.1.1",
     "ts-jest": "^28.0.7",
+    "ts-readme": "^1.1.3",
     "typescript": "^4.7.4"
   },
   "engines": {
