--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "escape-path-with-spaces": "^1.0.0",
     "exec-powershell": "workspace:*",
     "execa": "^5.1.1",
+    "extension-tools": "workspace:*",
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#9f672c1",
     "numerous": "1.0.3",
