--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@actions/exec": "^1.1.1",
     "@actions/io": "^1.1.2",
     "@actions/tool-cache": "^2.0.1",
+    "@npmcli/ci-detect": "^2.0.0",
     "escape-path-with-spaces": "^1.0.0",
     "exec-powershell": "workspace:*",
     "execa": "^5.1.1",
