feat: add untildify-user package

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "setup-python": "github:actions/setup-python#c474c82340438924daab9282d07300bfe7e3692d",
     "time-delta": "github:aminya/time-delta#69d91a41cef28e569be9a2991129f5f7d1f0d00e",
     "ubuntu-version": "^2.0.0",
-    "untildify": "^4.0.0",
+    "untildify-user": "workspace:*",
     "which": "^2.0.2"
   },
   "devDependencies": {
