fix: remove extension-tools and path in favor of patha

--- a/package.json
+++ b/package.json
@@ -59,11 +59,11 @@
     "escape-path-with-spaces": "github:aminya/escape-path-with-spaces#d9f81ee649203ddc55783a2f96ada59df06118e3",
     "exec-powershell": "workspace:1.0.0",
     "execa": "^5.1.1",
-    "extension-tools": "workspace:1.0.0",
     "is-url-online": "^1.5.0",
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#9f672c1",
     "numerous": "1.0.3",
+    "patha": "^0.3.0",
     "root-tools": "workspace:1.0.0",
     "semver": "7.3.7",
     "setup-python": "github:actions/setup-python#c474c82340438924daab9282d07300bfe7e3692d",
