feat: use admina instead of root-tools
https://github.com/aminya/admina

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@actions/io": "^1.1.2",
     "@actions/tool-cache": "^2.0.1",
     "@npmcli/ci-detect": "github:aminya/ci-detect#37fe40075bebec96794ba0a7c4a6d5c70cbea00d",
+    "admina": "^0.1.0",
     "ci-log": "workspace:1.0.0",
     "escape-path-with-spaces": "github:aminya/escape-path-with-spaces#d9f81ee649203ddc55783a2f96ada59df06118e3",
     "exec-powershell": "workspace:1.0.0",
@@ -64,7 +65,6 @@
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#9f672c1",
     "numerous": "1.0.3",
     "patha": "^0.4.0",
-    "root-tools": "workspace:1.0.0",
     "semver": "7.3.7",
     "setup-python": "github:actions/setup-python#c474c82340438924daab9282d07300bfe7e3692d",
     "time-delta": "github:aminya/time-delta#69d91a41cef28e569be9a2991129f5f7d1f0d00e",
