--- a/packages/user-access/package.json
+++ b/packages/user-access/package.json
@@ -11,7 +11,7 @@
     "build": "tsc"
   },
   "dependencies": {
-    "root-tools": "workspace:*"
+    "admina": "0.1.0"
   },
   "keywords": [
     "chown",
