fix: enable optimizations back
This was an issue with my local installation. I had modified terser-config-atomic locally! This caused the build files to be incorrect

--- a/package.json
+++ b/package.json
@@ -149,7 +149,7 @@
         "node": ">=12.x"
       },
       "includeNodeModules": true,
-      "optimize": false,
+      "optimize": true,
       "outputFormat": "commonjs"
     }
   }
