--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -36,6 +36,7 @@ words:
   - gcovr
   - ghes
   - Graphviz
+  - inja
   - isci
   - isroot
   - kcov
@@ -58,6 +59,7 @@ words:
   - npmrc
   - Opencppcoverage
   - OSSDK
+  - papm
   - patha
   - pnpm
   - pwsh
