fix: update setup-python

--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#9f672c1",
     "numerous": "1.0.3",
     "patha": "^0.4.1",
-    "setup-python": "github:actions/setup-python#c474c82340438924daab9282d07300bfe7e3692d",
     "semver": "7.3.8",
+    "setup-python": "github:actions/setup-python#v4.3.0",
     "time-delta": "github:aminya/time-delta#69d91a41cef28e569be9a2991129f5f7d1f0d00e",
     "ubuntu-version": "^2.0.0",
     "untildify-user": "workspace:1.0.0",
