--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "license": "Apache-2.0",
   "author": "Amin Yahyaabadi",
   "exports": {
-    "import": "./dist/setup-cpp.mjs",
-    "require": "./dist/setup-cpp.js"
+    "import": "./dist/node12/setup-cpp.mjs",
+    "require": "./dist/node12/setup-cpp.js"
   },
-  "main": "./dist/setup_cpp.js",
+  "main": "./dist/node12/setup_cpp.js",
   "source": "./src/main.ts",
   "bin": {
-    "setup-cpp": "./dist/setup_cpp.js",
-    "setup_cpp": "./dist/setup_cpp.js"
+    "setup-cpp": "./dist/node12/setup_cpp.js",
+    "setup_cpp": "./dist/node12/setup_cpp.js"
   },
   "scripts": {
-    "build": "shx rm -rf dist/ && shx mkdir ./dist && run-p lint.tsc build.parcel copy.matchers",
+    "build": "shx rm -rf dist/ && shx mkdir -p ./dist/node12 ./dist/node16 && run-p lint.tsc build.parcel copy.matchers",
     "build.docker": "pnpm build && docker build -f ./dev/docker/ubuntu_node.dockerfile -t setup_cpp .",
     "build.docker.arch": "pnpm build && docker build -f ./dev/docker/arch_node.dockerfile -t setup_cpp:arch .",
     "build.docker.fedora": "pnpm build && docker build -f ./dev/docker/fedora_node.dockerfile -t setup_cpp:fedora .",
@@ -24,7 +24,7 @@
     "build.parcel": "cross-env NODE_ENV=production parcel build --detailed-report",
     "bump": "ncu -u -x execa,numerous && pnpm update",
     "clean": "shx rm -rf .parcel-cache dist exe",
-    "copy.matchers": "shx cp ./src/gcc/gcc_matcher.json ./dist/ && shx cp ./src/msvc/msvc_matcher.json ./dist && shx cp ./src/python/python_matcher.json ./dist/ && shx cp ./src/llvm/llvm_matcher.json ./dist/ ",
+    "copy.matchers": "shx cp ./src/gcc/gcc_matcher.json ./dist/node12/ && shx cp ./src/msvc/msvc_matcher.json ./dist/node12/ && shx cp ./src/python/python_matcher.json ./dist/node12/ && shx cp ./src/llvm/llvm_matcher.json ./dist/node12/ && shx cp ./dist/node12/*.json ./dist/node16/",
     "dev": "cross-env NODE_ENV=development parcel watch",
     "docs": "shx rm -rf packages/*/README.md && pnpm -r exec readme --path ../../dev/readme/template.md -y && pnpm -r exec ts-readme",
     "format": "run-s lint.prettier",
@@ -127,6 +127,7 @@
     "electron": false,
     "patha": "patha/dist/index.node.mjs"
   },
+  "main.actions": "./dist/node16/setup_cpp.js",
   "pnpm": {
     "overrides": {
       "semver": "7.3.8",
@@ -147,6 +148,15 @@
       "context": "node",
       "engines": {
         "node": ">=12.x"
+      },
+      "includeNodeModules": true,
+      "optimize": true,
+      "outputFormat": "commonjs"
+    },
+    "main.actions": {
+      "context": "node",
+      "engines": {
+        "node": ">=16.x"
       },
       "includeNodeModules": true,
       "optimize": true,
