--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -75,7 +75,7 @@ jobs:
           pnpm run pack.exe
 
       - name: Upload Artifacts
-        if: ${{ (github.event_name == 'tag') && contains(matrix.os, 'windows-2022') || contains(matrix.os, 'ubuntu-22.04') || contains(matrix.os, 'macos-12') }}
+        if: ${{ (startsWith(github.ref, 'refs/tags/')) && contains(matrix.os, 'windows-2022') || contains(matrix.os, 'ubuntu-22.04') || contains(matrix.os, 'macos-12') }}
         uses: actions/upload-artifact@v3
         with:
           path: |
@@ -85,7 +85,7 @@ jobs:
 
   Release:
     needs: Test
-    if: ${{ (github.event_name == 'release') }}
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-22.04
     steps:
       - name: Download Artifacts
