--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
     "outDir": "./dist"
   },
   "compileOnSave": false,
-  "include": ["./src", "packages/untildify-user/untildify.ts"]
+  "include": ["./src", "dev/scripts", "packages/untildify-user/untildify.ts"]
 }
