--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   Test:
-    if: ${{ !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip test]') }}
+    if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -63,7 +63,7 @@ jobs:
       #   uses: mxschmitt/action-tmate@v3
 
       - name: Test
-        if: "!contains(github.event.head_commit.message, '[skip ci test]')"
+        if: "!contains(github.event.head_commit.message, '[skip test]')"
         run: |
           pnpm run test
         continue-on-error: ${{ contains(matrix.os, 'ubuntu-18.04') }}
