--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "admina": "^0.1.3",
     "ci-log": "workspace:1.0.0",
     "escape-path-with-spaces": "github:aminya/escape-path-with-spaces#d9f81ee649203ddc55783a2f96ada59df06118e3",
+    "escape-quotes": "^1.0.2",
     "exec-powershell": "workspace:1.0.0",
     "execa": "^5.1.1",
     "is-url-online": "^1.5.0",
@@ -65,6 +66,7 @@
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#9f672c1",
     "numerous": "1.0.3",
     "patha": "^0.4.1",
+    "quote-unquote": "^1.0.0",
     "semver": "7.3.8",
     "setup-python": "github:actions/setup-python#v4.3.0",
     "time-delta": "github:aminya/time-delta#69d91a41cef28e569be9a2991129f5f7d1f0d00e",
