--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#9f672c1",
     "numerous": "1.0.3",
+    "path-exists": "^5.0.0",
     "patha": "^0.4.1",
     "quote-unquote": "^1.0.0",
     "semver": "7.3.8",
