--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "ci-log": "workspace:1.0.0",
     "escape-path-with-spaces": "github:aminya/escape-path-with-spaces#d9f81ee649203ddc55783a2f96ada59df06118e3",
     "escape-quotes": "^1.0.2",
+    "escape-string-regexp": "^5.0.0",
     "exec-powershell": "workspace:1.0.0",
     "execa": "^5.1.1",
     "is-url-online": "^1.5.0",
