--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "build.docker.arch": "pnpm build && docker build -f ./dev/docker/arch_node.dockerfile -t setup_cpp:arch .",
     "build.docker.fedora": "pnpm build && docker build -f ./dev/docker/fedora_node.dockerfile -t setup_cpp:fedora .",
     "build.docker.ubuntu": "pnpm build && docker build -f ./dev/docker/ubuntu_node.dockerfile -t setup_cpp:ubuntu .",
-    "build.parcel": "cross-env NODE_ENV=production parcel build --detailed-report",
-    "bump": "ncu -u -x execa,numerous && pnpm update",
+    "build.parcel": "cross-env NODE_ENV=production parcel build",
+    "bump": "ncu -u -x execa,numerous,path-exists && pnpm update",
     "clean": "shx rm -rf .parcel-cache dist exe",
     "copy.matchers": "shx cp ./src/gcc/gcc_matcher.json ./dist/node12/ && shx cp ./src/msvc/msvc_matcher.json ./dist/node12/ && shx cp ./src/python/python_matcher.json ./dist/node12/ && shx cp ./src/llvm/llvm_matcher.json ./dist/node12/ && shx cp ./dist/node12/*.json ./dist/node16/",
     "dev": "cross-env NODE_ENV=development parcel watch",
@@ -70,7 +70,7 @@
     "patha": "^0.4.1",
     "quote-unquote": "^1.0.0",
     "semver": "7.3.8",
-    "setup-python": "github:actions/setup-python#v4.3.0",
+    "setup-python": "github:actions/setup-python#v4.3.1",
     "time-delta": "github:aminya/time-delta#69d91a41cef28e569be9a2991129f5f7d1f0d00e",
     "ubuntu-version": "^2.0.0",
     "untildify-user": "workspace:1.0.0",
@@ -79,22 +79,22 @@
   },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.2",
-    "@types/jest": "^29.2.3",
+    "@types/jest": "^29.2.4",
     "@types/mri": "^1.1.1",
-    "@types/node": "^18.11.9",
+    "@types/node": "^18.11.15",
     "@types/semver": "^7.3.13",
     "@types/which": "^2.0.1",
     "caxa": "^3.0.1",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
-    "cspell": "^6.14.3",
-    "eslint": "^8.28.0",
+    "cspell": "^6.17.0",
+    "eslint": "^8.29.0",
     "eslint-config-atomic": "^1.18.1",
     "gen-readme": "^1.6.0",
     "jest": "^29.3.1",
-    "npm-check-updates": "^16.4.1",
+    "npm-check-updates": "^16.6.0",
     "npm-run-all2": "^6.0.4",
-    "parcel": "2.8.0",
+    "parcel": "2.8.1",
     "prettier": "2.7.1",
     "prettier-config-atomic": "^3.1.0",
     "readme-md-generator": "^1.0.0",
@@ -103,7 +103,7 @@
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "ts-readme": "^1.1.3",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.4"
   },
   "engines": {
     "node": ">=12.x"
