feat: add mingw cross compiler
* add docker mingw tests
* add node16 test

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -121,9 +121,14 @@ jobs:
           - ubuntu-20.04
         container:
           - "ubuntu_node.dockerfile"
+          - "ubuntu_node_16.dockerfile"
+          - "ubuntu_node.mingw.dockerfile"
+          - "ubuntu_22.04_node.dockerfile"
           - "ubuntu_20.04_node.dockerfile"
           - "arch_node.dockerfile"
+          - "arch_node.mingw.dockerfile"
           - "fedora_node.dockerfile"
+          - "fedora_node.mingw.dockerfile"
         node:
           - 14
         pnpm:
