--- a/dev/container-tests/arch.mingw.yml
+++ b/dev/container-tests/arch.mingw.yml
@@ -2,11 +2,11 @@ schemaVersion: 2.0.0
 
 commandTests:
   - name: mingw c compiler
-    command: $CC
+    command: x86_64-w64-mingw32-gcc
     args: ["--version"]
     expectedOutput: [".*x86_64-w64-mingw32-gcc.*"]
   - name: mingw c++ compiler
-    command: $CXX
+    command: x86_64-w64-mingw32-g++
     args: ["--version"]
     expectedOutput: [".*x86_64-w64-mingw32-g\\+\\+*"]
   - name: powershell
@@ -17,9 +17,6 @@ commandTests:
 fileExistenceTests:
   - name: "vcpkg"
     path: "/root/vcpkg"
-    shouldExist: true
-  - name: "cmake toolchain"
-    path: "/home/cmake/toolchains/x86_64-w64-mingw32.toolchain.cmake"
     shouldExist: true
   - name: "cross root"
     path: "/usr/x86_64-w64-mingw32"
