--- a/action.yml
+++ b/action.yml
@@ -84,7 +84,7 @@ inputs:
 
 runs:
   using: "node16"
-  main: "dist/node16/setup_cpp.js"
+  main: "dist/node16/setup-cpp.js"
 
 branding:
   icon: "award"
