--- a/package.json
+++ b/package.json
@@ -9,18 +9,28 @@
     "import": "./dist/node12/setup-cpp.mjs",
     "require": "./dist/node12/setup-cpp.js"
   },
-  "main": "./dist/node12/setup_cpp.js",
+  "main": "./dist/node12/setup-cpp.js",
   "source": "./src/main.ts",
   "bin": {
-    "setup-cpp": "./dist/node12/setup_cpp.js",
-    "setup_cpp": "./dist/node12/setup_cpp.js"
+    "setup-cpp": "./dist/node12/setup-cpp.js"
   },
+  "files": [
+    "dist",
+    "src",
+    "packages",
+    "dev",
+    "README.md",
+    "LICENSE.txt",
+    "LICENSE.dependencies.txt",
+    "package.json",
+    "tsconfig.json"
+  ],
   "scripts": {
     "build": "shx rm -rf dist/ && shx mkdir -p ./dist/node12 ./dist/node16 && run-p lint.tsc build.parcel copy.matchers",
-    "build.docker": "pnpm build && docker build -f ./dev/docker/ubuntu_node.dockerfile -t setup_cpp .",
-    "build.docker.arch": "pnpm build && docker build -f ./dev/docker/arch_node.dockerfile -t setup_cpp:arch .",
-    "build.docker.fedora": "pnpm build && docker build -f ./dev/docker/fedora_node.dockerfile -t setup_cpp:fedora .",
-    "build.docker.ubuntu": "pnpm build && docker build -f ./dev/docker/ubuntu_node.dockerfile -t setup_cpp:ubuntu .",
+    "build.docker": "pnpm build && docker build -f ./dev/docker/ubuntu_node.dockerfile -t setup-cpp .",
+    "build.docker.arch": "pnpm build && docker build -f ./dev/docker/arch_node.dockerfile -t setup-cpp:arch .",
+    "build.docker.fedora": "pnpm build && docker build -f ./dev/docker/fedora_node.dockerfile -t setup-cpp:fedora .",
+    "build.docker.ubuntu": "pnpm build && docker build -f ./dev/docker/ubuntu_node.dockerfile -t setup-cpp:ubuntu .",
     "build.parcel": "cross-env NODE_ENV=production parcel build",
     "bump": "ncu -u -x execa,numerous,path-exists && pnpm update",
     "clean": "shx rm -rf .parcel-cache dist exe",
@@ -35,14 +45,14 @@
     "lint.tsc": "tsc --noEmit",
     "pack.exe": "shx rm -rf ./dist/tsconfig.tsbuildinfo && ts-node --esm ./dev/scripts/pack-exe.ts",
     "prepare": "pnpm run -r build && pnpm run -w build",
-    "start.docker": "docker run -t setup_cpp .",
-    "start.docker.arch": "docker run -t setup_cpp:arch .",
-    "start.docker.fedora": "docker run -t setup_cpp:fedora .",
-    "start.docker.ubuntu": "docker run -t setup_cpp:ubuntu .",
+    "start.docker": "docker run -t setup-cpp .",
+    "start.docker.arch": "docker run -t setup-cpp:arch .",
+    "start.docker.fedora": "docker run -t setup-cpp:fedora .",
+    "start.docker.ubuntu": "docker run -t setup-cpp:ubuntu .",
     "test": "run-p --continue-on-error test.lint test.unit",
-    "test.docker.arch": "docker build -f ./dev/docker/arch_node.dockerfile --target base -t setup_cpp:arch-base . && container-structure-test test --image setup_cpp:arch-base --config ./dev/container-tests/arch.yml",
-    "test.docker.fedora": "docker build -f ./dev/docker/fedora_node.dockerfile --target base -t setup_cpp:fedora-base . && container-structure-test test --image setup_cpp:fedora-base --config ./dev/container-tests/fedora.yml",
-    "test.docker.ubuntu": "docker build -f ./dev/docker/ubuntu_node.dockerfile --target base -t setup_cpp:ubuntu-base . && container-structure-test test --image setup_cpp:ubuntu-base --config ./dev/container-tests/ubuntu.yml",
+    "test.docker.arch": "docker build -f ./dev/docker/arch_node.dockerfile --target base -t setup-cpp:arch-base . && container-structure-test test --image setup-cpp:arch-base --config ./dev/container-tests/arch.yml",
+    "test.docker.fedora": "docker build -f ./dev/docker/fedora_node.dockerfile --target base -t setup-cpp:fedora-base . && container-structure-test test --image setup-cpp:fedora-base --config ./dev/container-tests/fedora.yml",
+    "test.docker.ubuntu": "docker build -f ./dev/docker/ubuntu_node.dockerfile --target base -t setup-cpp:ubuntu-base . && container-structure-test test --image setup-cpp:ubuntu-base --config ./dev/container-tests/ubuntu.yml",
     "test.lint": "run-p --aggregate-output --continue-on-error lint.cspell test.lint.eslint test.lint.prettier lint.tsc",
     "test.lint.eslint": "eslint **/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/",
     "test.lint.prettier": "prettier . --check",
@@ -132,7 +142,7 @@
     "electron": false,
     "patha": "patha/dist/index.node.mjs"
   },
-  "main.actions": "./dist/node16/setup_cpp.js",
+  "main.actions": "./dist/node16/setup-cpp.js",
   "pnpm": {
     "overrides": {
       "semver": "7.3.8",
