--- a/package.json
+++ b/package.json
@@ -65,55 +65,54 @@
     "@actions/io": "^1.1.2",
     "@actions/tool-cache": "^2.0.1",
     "@npmcli/ci-detect": "github:aminya/ci-detect#37fe40075bebec96794ba0a7c4a6d5c70cbea00d",
-    "admina": "^0.1.3",
-    "ci-log": "workspace:1.0.0",
-    "escape-path-with-spaces": "github:aminya/escape-path-with-spaces#d9f81ee649203ddc55783a2f96ada59df06118e3",
-    "escape-quotes": "^1.0.2",
-    "escape-string-regexp": "^5.0.0",
-    "exec-powershell": "workspace:1.0.0",
-    "execa": "^5.1.1",
-    "is-url-online": "^1.5.0",
-    "mri": "^1.2.0",
-    "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#9f672c1",
-    "numerous": "1.0.3",
-    "path-exists": "^4.0.0",
-    "patha": "^0.4.1",
-    "quote-unquote": "^1.0.0",
-    "retry-as-promised": "^7.0.3",
-    "semver": "7.3.8",
-    "setup-python": "github:actions/setup-python#v4.5.0",
-    "time-delta": "github:aminya/time-delta#69d91a41cef28e569be9a2991129f5f7d1f0d00e",
-    "ubuntu-version": "^2.0.0",
-    "untildify-user": "workspace:1.0.0",
-    "user-access": "workspace:1.0.0",
-    "which": "^3.0.0",
-
     "@types/cross-spawn": "^6.0.2",
-    "@types/jest": "^29.2.5",
+    "@types/jest": "^29.2.6",
     "@types/mri": "^1.1.1",
     "@types/node": "^18.11.18",
     "@types/semver": "^7.3.13",
     "@types/which": "^2.0.1",
+    "admina": "^0.1.3",
     "caxa": "^3.0.1",
+    "ci-log": "workspace:1.0.0",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
-    "cspell": "^6.18.1",
+    "cspell": "^6.19.2",
+    "escape-path-with-spaces": "github:aminya/escape-path-with-spaces#d9f81ee649203ddc55783a2f96ada59df06118e3",
+    "escape-quotes": "^1.0.2",
+    "escape-string-regexp": "^5.0.0",
     "eslint": "^8.32.0",
     "eslint-config-atomic": "^1.18.2",
+    "exec-powershell": "workspace:1.0.0",
+    "execa": "^5.1.1",
     "gen-readme": "^1.6.0",
+    "is-url-online": "^1.5.0",
     "jest": "^29.3.1",
+    "mri": "^1.2.0",
+    "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#9f672c1",
     "npm-check-updates": "^16.6.2",
     "npm-run-all2": "^6.0.4",
-    "parcel": "2.8.2",
+    "numerous": "1.0.3",
+    "parcel": "2.8.3",
+    "path-exists": "^4.0.0",
+    "patha": "^0.4.1",
     "prettier": "2.7.1",
     "prettier-config-atomic": "^3.1.0",
+    "quote-unquote": "^1.0.0",
     "readme-md-generator": "^1.0.0",
+    "retry-as-promised": "^7.0.3",
+    "semver": "7.3.8",
+    "setup-python": "github:actions/setup-python#v4.5.0",
     "shx": "0.3.4",
     "terser-config-atomic": "^0.1.1",
+    "time-delta": "github:aminya/time-delta#69d91a41cef28e569be9a2991129f5f7d1f0d00e",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "ts-readme": "^1.1.3",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "ubuntu-version": "^2.0.0",
+    "untildify-user": "workspace:1.0.0",
+    "user-access": "workspace:1.0.0",
+    "which": "^3.0.0"
   },
   "engines": {
     "node": ">=12.x"
