fix: update ci-detect package

--- a/package.json
+++ b/package.json
@@ -64,11 +64,14 @@
     "@actions/exec": "^1.1.1",
     "@actions/io": "^1.1.2",
     "@actions/tool-cache": "^2.0.1",
-    "@npmcli/ci-detect": "github:aminya/ci-detect#37fe40075bebec96794ba0a7c4a6d5c70cbea00d",
+    "@npmcli/ci-detect": "^3.0.2",
     "@types/cross-spawn": "^6.0.2",
+    "@types/eslint": "^8.21.1",
     "@types/jest": "^29.4.0",
     "@types/mri": "^1.1.1",
     "@types/node": "^18.15.0",
+    "@types/npmcli__ci-detect": "^2.0.0",
+    "@types/prettier": "2.7.1",
     "@types/semver": "^7.3.13",
     "@types/which": "^2.0.2",
     "admina": "^0.1.3",
