--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
     "cspell": "^6.28.0",
-    "escape-path-with-spaces": "github:aminya/escape-path-with-spaces#d9f81ee649203ddc55783a2f96ada59df06118e3",
+    "escape-path-with-spaces": "^1.0.2",
     "escape-quotes": "^1.0.2",
     "escape-string-regexp": "^5.0.0",
     "eslint": "^8.35.0",
